# shelly_docs

./: README.md
mgmt_docs/: shellydocs.yaml  state.yaml
mgmt_docs/design/: kb_and_item.md
mgmt_docs/prompts/: building_unit_tests.md  data_querying.md  item_crud.md  tui.md  updated_paths.md
mgmt_docs/system/: be.md  cli.md  tui.md
mgmt_docs/use_cases/: actors.md  use_cases.md
shelly_docs/: README.md  pyproject.toml
shelly_docs/src/shelly_docs/: .gitignore  main.py
shelly_docs/src/shelly_docs/be/crud/: crud.py  query.py  shelly_doc_processing.py
shelly_docs/src/shelly_docs/be/shelly_docs_config/: config.py
shelly_docs/src/shelly_docs/tui/: knowledge_base_widget.tcss  styles.tcss  tui.py
shelly_docs/tests/: __init__.py  conftest.py  test_crud.py  test_query.py
shelly_docs/tests/test_data/a/: input_a.md  input_b.md  shellydocs.yaml
